tests/errors/WriteUninitializedArrayIndex.imp
VAR
  a[2]
BEGIN
  WRITE a[0];
END
